--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,13 @@ main {
 .about-me-img {
   background: rgb(107, 124, 136);
 }
+
+/* vslide */
+.slider {
+  color: red;
+  position: fixed;
+  top: 50vh;
+  right: 10px;
+  height: 30px;
+  width: 20px;
+}
